[package]
name = "notion-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
anyhow = "1.0.69"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
once_cell = "1.17.1"
serde_with = "2.3.1"
iter_tools = "0.1.4"
chrono = { version = "0.4.23", features = ["serde"] }
parking_lot = "0.12.1"
indent = "0.1.1"
async-recursion = "1.0.2"
serde_path_to_error = "0.1.10"
tracing = "0.1.37"

[dev-dependencies]
serde_json = "1.0"

